V1.21.0 - Eliminacao do endpoint /pasajes/update